refactor: remove warnings and format